Fix dark mode for FollowCardanoSection

--- a/src/components/FollowCardanoSection/styles.module.css
+++ b/src/components/FollowCardanoSection/styles.module.css
@@ -34,6 +34,9 @@
 }
 
 [data-theme='dark'] {
+  .container {
+    background-image: linear-gradient(315deg, rgb(43, 89, 205), rgb(0, 24, 80));
+  }
   .header h6 {
     color: #ffffff;
   }
